--- a/docs/PVM-semestralka-pulpan.tex
+++ b/docs/PVM-semestralka-pulpan.tex
@@ -134,27 +134,24 @@ bottom=4cm,
 
 	{\let\clearpage\relax \chapter{Teoretický úvod}}
 
-
-
-	
 	OpenFOAM je sada výpočetních nástrojů pro numerické simulace CFD (computational fluid dynamics) problémů, tedy problémů zabývajících se prouděním tekutin, vedením tepla a podobných procesů. OpenFOAM využívá k hledání řešení metody konečných objemů (FVM). 
 	
-	FVM je numerická metoda na řešení parciálních diferenciálních rovnic na dané 3D geometrii převedené na síť nepřekrývajích se elementů (konečných objemů). Diskretizací úlohy získáme soustavu lineárních algebraických rovnic v neznámé $\boldsymbol{x}$ pro každou ze sledovaných proměnných. Soustava je tvaru
+	FVM je numerická metoda na řešení parciálních diferenciálních rovnic na dané geometrii transformované na síť nepřekrývajích se elementů (konečných objemů). Diskretizací úlohy získáme soustavu lineárních algebraických rovnic v neznámé $\boldsymbol{x}$ pro každou ze sledovaných proměnných. Soustava je tvaru
 	\begin{equation}
 		\boldsymbol{A}\boldsymbol{x} = \boldsymbol{b},
 		\label{eq:linear_set}
 	\end{equation}
-	kde $\boldsymbol{A}$ je regulární matice popisující diskretizovaný model, $x$ vektor závislé proměnné a $b$ vektor pravé strany obsahující všechny zdroje, okrajové podmínky a všechny komponenty, které nelze linearizovat. 
+	kde $\boldsymbol{A}$ je regulární matice popisující diskretizovaný model, $\boldsymbol{x}$ vektor závislé proměnné a $\boldsymbol{b}$ vektor pravé strany obsahující všechny zdroje, okrajové podmínky a všechny komponenty, které nelze linearizovat. 
 	
-	Zabývat se budeme jen posledním článkem řetězce, tedy lineárními řešiči lineárních algebraických rovnic. Na testovací úloze si ukážeme vhodnost jednotlivých řešičů a budeme sledovat vliv parametrů na konvergenci řešení. Dále budeme používat lineárních řešičích mluvit jen jako o  \uv{řešičích}, pokud nebude hrozit záměna kontextu.
+	Zabývat se budeme jen posledním článkem řetězce, tedy lineárními řešiči algebraických rovnic. Na testovací úloze si ukážeme vhodnost jednotlivých řešičů a budeme sledovat vliv parametrů na konvergenci řešení. Dále budeme o lineárních řešičích mluvit jen jako o  \uv{řešičích}, pokud nebude hrozit záměna kontextu.
 	
-	Obecně lze soustavu lineárních rovnic řešit buď přímými nebo iteračními řešiči. Úlohy CFD jsou většinou silně nelineární a proto není jejich řešení pomocí přímých řešičů snadné a vyžaduje větší výpočetní výkon. Přesto si ukážeme i tuto cestu.
+	Obecně lze soustavu lineárních rovnic řešit buď přímými nebo iteračními řešiči. Úlohy CFD jsou většinou silně nelineární a proto není jejich řešení pomocí přímých řešičů snadné a vyžaduje větší výpočetní výkon.
 	
-	Přímé řešiče hledají přesné řešení pomocí inverzní matice $\boldsymbol{A} ^{-1} $ ve formě
+	Přímé řešiče hledají přesné řešení pomocí inverzní matice $\boldsymbol{A} ^{-1}$ ve formě
 $$ \boldsymbol{x} = \boldsymbol{A}^{-1} \boldsymbol{b}.$$  
-Většina přímých metod je založna na Gaussově eliminici a případné transformaci úlohy na úlohu se stejným řešením ale snadněji řešitelnou například pomocí LU nebo DILU rozkladu.
+Většina přímých metod je založna na Gaussově eliminici a případné transformaci úlohy na úlohu se stejným řešením ale snadněji řešitelnou, například pomocí LU nebo DILU rozkladu.
 
-	Většinou ale nejde inverzi snadno nalézt a v tom případě se používají přibližné řešiče iterační. Výhodou těchto metod je mnohem menší výpočetní náročnost i náročnost na paměť. Pomocí iterací počítáme posloupnost řešení $\boldsymbol{x}^{n}$, která za daných podmínek konverguje k řešení $\boldsymbol{x}$.  Využívané iterační řešiče jsou Gaussova-Seidelova metoda, metody Krylovových prostorů (kam patří například metoda sdružených gradientů) a víceúrovňové metody
+	I když přímé řešiče naleznou vždy přesné řešení v konečném počtu kroků, výpočetní náročnost je extrémní. Inverzi $\boldsymbol{A} ^{-1}$ není výpočetně levné nalézt a proto se většinou používají přibližné řešiče iterační. Výhodou těchto metod je mnohem menší výpočetní náročnost i náročnost na paměť. Pomocí iterací počítáme posloupnost řešení $\boldsymbol{x}^{(n)}$, která za daných podmínek konverguje k řešení $\boldsymbol{x}$.  Nejčastěji využívané iterační řešiče jsou Gaussova-Seidelova metoda, metody Krylovových prostorů (kam patří například metoda sdružených gradientů) a víceúrovňové metody.
 	
 	Iterační metody obecně měří chybu aproximace řešení v každém kroku pomocí reziduí, tedy dosazením aproximovaného řešení do původních rovnic a vypočtením rozdílu oproti pravé straně $\boldsymbol{b}$. Reziduum $\boldsymbol{r} ^{(n)} $ definujeme jako 
 
@@ -169,17 +166,17 @@ $$\Vert{\boldsymbol{r}^{(n)}}\Vert < \epsilon.$$
 	
 	OpenFOAM obsahuje kromě přímých řešičů hlavně iterační řešiče pomocí gradientních metod, víceúrovňových metod a řešiče pomocí smootherů (vyhlazovačů).
 	
-\textbf{Gradientní metody} jsou založeny na tom, že úlohu \ref{eq:linear_set} lze přeformulovat na úlohu minimalizace kvadratické funkce
+\textbf{Gradientní metody} jsou založeny na tom, že úlohu \eqref{eq:linear_set} lze přeformulovat na úlohu minimalizace kvadratické funkce
 \begin{equation}
 	\boldsymbol{Q}(\boldsymbol{x}) = \frac{1}{2} \boldsymbol{x}^T \boldsymbol{A} \boldsymbol{x}-\boldsymbol{b}^T \boldsymbol{x} + \boldsymbol{c}.
 	\label{eq:quad_func}
 \end{equation}
-V případě symetrické a positivně definitní matice $\boldsymbol{A}$ je iterační metoda řešení úlohy \ref{eq:linear_set} definována vztahem
+V případě symetrické a positivně definitní matice $\boldsymbol{A}$ je iterační metoda řešení úlohy \eqref{eq:linear_set} definována vztahem
 \begin{equation}
 	\boldsymbol{x}^{(n+1)} = \boldsymbol{x}^{(n)} + \alpha^{(n)} \left( \boldsymbol{\delta} \boldsymbol{x}^{(n)} \right),
 	\label{eq:grad_iter}
 \end{equation}
-kde $\alpha^{(n)}$ je relaxační faktor a $\boldsymbol{\delta} \boldsymbol{x}^{(n)}$ je člen minimalizující \ref{eq:quad_func}, který lze získat například metodou největšího spádu, kdy použijeme jako minimalizující prvek vektor ve směru největšího spádu. To ale často vede k oscilacím okolo minima a proto se většinou používá metoda sdružených gradientů. Ta pracuje s posloupností $N$ směrů  $\boldsymbol{d}^{(0)}, \boldsymbol{d}^{(1)}, \boldsymbol{d}^{(2)} \cdots \boldsymbol{d}^{(N-1)}$ takových, že splňují
+kde $\alpha^{(n)}$ je relaxační faktor (viz níže) a $\boldsymbol{\delta} \boldsymbol{x}^{(n)}$ je člen minimalizující funkci \eqref{eq:quad_func}, který lze získat například metodou největšího spádu, kdy použijeme jako minimalizující prvek gradient $\nabla Q(\boldsymbol{x}^{(n)})$. To ale často vede k oscilacím okolo minima a proto se většinou používá metoda sdružených gradientů. Ta pracuje s posloupností $N$ směrů  $\boldsymbol{d}^{(0)}, \boldsymbol{d}^{(1)}, \boldsymbol{d}^{(2)} \cdots \boldsymbol{d}^{(N-1)}$ takových, že splňují
 \begin{equation*}
 	\left(\boldsymbol{d}^{(n)}\right)^T\boldsymbol{A} \boldsymbol{d}^{(m)} = 0
 \end{equation*}
@@ -209,21 +206,21 @@ V případě, že není matice $\boldsymbol{A}$ symetrická, lze použít metodu
 
 %%% https://astra.nti.tul.cz/~petr.sidlof/vyuka/NMPT/pr05%20-%20Reseni%20linearnich%20systemu%20a%20paralelizace.pdf
 
-V součastnosti asi nejpoužívanější jsou \textbf{víceúrovňové (multigrid) metody}. Ty odstraňují základní problém Krylovovských metod, tedy vysokou náročnost na hardware už pro středně velké úlohy. Základní myšlenkou je využití několika různě velkých sití. Ty jemnější pro detailnější řešení a odtsranění vysokofrekvenčních chyb, hrubší pak pro rychlé odstranění nízkofrekvnčních chyb, které nejsou na jemnějších rozpoznatelné a proto často prodlužují konvergenci. 
+V součastnosti asi nejpoužívanější jsou \textbf{víceúrovňové} (multigrid) metody. Ty odstraňují základní problém Krylovovských metod, tedy vysokou náročnost na hardware už pro středně velké úlohy. Základní myšlenkou je využití několika různě velkých sití. Ty jemnější pro detailnější řešení a odstranění vysokofrekvenčních chyb, hrubší pak pro rychlé odstranění nízkofrekvenčních chyb, které nejsou na jemnějších sítích rozpoznatelné a proto často prodlužují konvergenci. 
 
 Víceúrovňová metoda postupuje v následujících krocích:
 \begin{enumerate}
-	\item několik kroků iterační metody (např. Gauss-Seidel) na jemné síti - pre-smoothing
-	\item projekce na hrubší síť - restriction
-	\item řešení na hrubé síti (na velmi hrubé síti možné použít i přímý řešič), odstranění nízkofrekvenčních chyb
-	\item projekce zpět na jemnou síť - prolongation
-	\item několik kroků iterační metody na vyhlazení vysokofrekvenčních chyb - post-smoothing
+	\item několik kroků iterační metody (např. Gauss-Seidel) na jemné síti - pre-smoothing,
+	\item projekce na hrubší síť - restriction,
+	\item řešení na hrubé síti (na velmi hrubé síti je možné použít i přímý řešič), odstranění nízkofrekvenčních chyb,
+	\item projekce zpět na jemnou síť - prolongation,
+	\item několik kroků iterační metody na vyhlazení vysokofrekvenčních chyb - post-smoothing.
 \end{enumerate}
 
-Úrovní může být i více než 2 a podle způsobu přechodů (restriction a prolongation) mezi nimy se mluví o V-cyklech, W-cyklech, případně F-cyklech. Víceúrovňové metody se využívají ve 2 variantách:
+Úrovní sítí je většinou více než 2 a podle způsobu přechodů (restriction a prolongation fáze) mezi nimy se mluví o tzv. V-cyklech, W-cyklech, případně F-cyklech. Víceúrovňové metody se využívají ve 2 variantách:
 \begin{itemize}
-	\item Geometrické - na úrovni sítě, využívá informaci o sousedních elementech
-	\item Algebraické - na úrovni matice, bez znalosti gometrie, je univerzální pro jakékoliv problémy
+	\item geometrické - na úrovni sítě, využívá informaci o sousedních elementech,
+	\item algebraické - na úrovni matice, bez znalosti gometrie, je univerzální pro jakékoliv problémy.
 \end{itemize}
 	
 %	\begin{equation}
@@ -238,10 +235,10 @@ Víceúrovňová metoda postupuje v následujících krocích:
 %	TROCHU LÍP POPSAT, KOUKNOUT DO NA
 		
 	Iterační metody řešení lineárních algebrických rovnic často využívají \textbf{předpodmínění} (preconditiong). To převede úlohu do tvaru s ekvivalentním řešením ale lepšímy spektrálnímy vlastnostmi matice soustavy.  Při levém předpodmínění (existuje i pravé a centrální) předpokládáme soustavu ve tvaru
-	$$\boldsymbol{P}^{-1}\boldsymbol{A}\boldsymbol{x} =\boldsymbol{P}^{-1}\boldsymbol{b}$$
-	kde $\boldsymbol{P}$ je předpodmiňovač. Ten zajistí, že konvergence předpodmíněného systému je rychlejší, než bez něj. Při hledání předpodmiňovače $\boldsymbol{P}$ je často uvažována nějaká snadno invertovatelná aproximace matice $\boldsymbol{A}$. Nejjednodušší volbou je tak $\boldsymbol{P} = \boldsymbol{I}$, což ovšem vede k nepodmíněnému problému. Ideální je naopak $\boldsymbol{P} = \boldsymbol{A}$, to ovšem znamená, že inverze předpodmiňovače je stejně náročná jako původní matice. Často se tak volí různé rozklady matice $\boldsymbol{A}$, jako jsou LU, ILU nebo DILU rozklady.
+	$$\boldsymbol{P}^{-1}\boldsymbol{A}\boldsymbol{x} =\boldsymbol{P}^{-1}\boldsymbol{b},$$
+	kde $\boldsymbol{P}$ je předpodmiňovač. Ten zajistí, že konvergence předpodmíněného systému je rychlejší než bez něj. Při hledání předpodmiňovače $\boldsymbol{P}$ je často uvažována nějaká snadno invertovatelná aproximace matice $\boldsymbol{A}$. Nejjednodušší volbou je tak $\boldsymbol{P} = \boldsymbol{I}$, což ovšem vede k nepodmíněnému problému. Ideální je naopak $\boldsymbol{P} = \boldsymbol{A}$, to ovšem znamená, že inverze předpodmiňovače je stejně náročná jako původní matice. Často se tak volí různé rozklady matice $\boldsymbol{A}$, jako jsou LU, ILU nebo DILU rozklady.
 	
-	Pro zrychlení konvergence se u iteračních řešičů využívá často i tzv. \textbf{vyhlazovač} (smoother), pro který lze používat např. základní Jacobiho, nebo Gauss-Seidelova metodu. Po každé iteraci řešiče metody se pustí několik kroků vybraného vyhlazovače, který \uv{vyhladí} špičky v reziduu a tím i sníží jeho normovanou hodnotu. Na rozdíl od předpodmínění dokáže vyhlazovač snížit počet kroků nezávisle na velikosti sítě. Pro příklad uveďme iterační vztah pro Gaussův-Seidelův vyhlazovač, kde $\boldsymbol{L}$ je dolní trojúhelníková část matice $\boldsymbol{A}$.
+	Pro zrychlení konvergence se u iteračních řešičů využívá tzv. \textbf{vyhlazovač} (smoother), pro který lze používat např. základní Jacobiho, nebo Gaussovu-Seidelovu metodu. Po každé iteraci řešiče metody se pustí několik kroků vybraného vyhlazovače, který \uv{vyhladí} špičky v reziduu a tím i sníží jeho normovanou hodnotu. Na rozdíl od předpodmínění dokáže vyhlazovač snížit počet kroků nezávisle na velikosti sítě. Pro příklad uveďme iterační vztah pro Gaussův-Seidelův vyhlazovač, kde $\boldsymbol{L}$ je dolní trojúhelníková část matice $\boldsymbol{A}$.
 	
 	\begin{equation}
 		\boldsymbol{x^{(k+1)}} = \boldsymbol{x^{(k)}}+\boldsymbol{L}^{-1}(\boldsymbol{b} -  \boldsymbol{A}\boldsymbol{x^{(k)}}),
@@ -250,12 +247,13 @@ Víceúrovňová metoda postupuje v následujících krocích:
 
 Další vyhlazovače jsou pak založeny na principu LU, DILU, nebo Choleského rozkladu.
 	
+	Aby se zlepšila stabilita numerického řešiče, doporučuje se využít \textbf{relaxaci} metody. Pomocí relaxačního faktoru $\alpha, 0 < \alpha \leq 1 $, limituje relaxace změnu řešení mezi jednotlivými iteracemi dle vztahu \eqref{eq:grad_iter}. Pokud je   $\alpha = 1$ , žádná relaxace se neuplatňuje, $\alpha = 0$ znamená žádnou změnu mezi jednotlivými kroky.   Optimální $\alpha$ je dostatečně malé, aby zabránilo oscilacím v numerických výpočtech a zároveň dostatečně velké, aby nezpomalovalo nadměrně konvergenci. 
 	
 	{\let\clearpage\relax \chapter{Lineární řešiče v OpenFOAM}}
 
 OpenFOAM obsahuje kromě základního přímého řešiče \texttt{diagonalSolver} tři základní typy řešičů:
 \begin{enumerate}
-	\item řešiče metodou sdružených gradientů 
+	\item řešiče typu sdružených gradientů 
 	\item víceúrovňové řešiče
 	\item řešiče založené na vyhlazovači
 
@@ -286,14 +284,16 @@ Konkrétní řešiče jsou popsány v tabulce \ref{table:solvers}.
 		
 To který řešič je možné použít je závislé na matici $\boldsymbol{A}$ a tom, jestli je symetrická nebo nesymetrická. Symetrie $\boldsymbol{A}$ samozřejmě závisí na rovnicích, které chceme řešit. V případě, že zvolíme nesprávný řešič vzhledem k symetričnosti matice $\boldsymbol{A}$ OpenFOAM sám volbu opraví.
 
-Doporučeným řešičem v OpenFOAM je, jak jsme již uvedli v teoretické části obecně,  víceúrovňový řešič GAMG (geometric-algebraic multi-grid). Dál je obsažen i řešič založený na vyhlazovači, kdy je možné vybrat použitý smoother.  Většinou je Gauss-Seidel nejlepší volbou.
+Doporučeným řešičem v OpenFOAM je, jak jsme již uvedli v teoretické části obecně,  víceúrovňový řešič GAMG (geometric-algebraic multi-grid). Řešičem o kterém jsme dosud nemluvili je řešič založený na vyhlazovači, kdy vybraný smoother slouží nejen k vyhlazení, ale i k řešení soustavy.  Většinou je nejlepší volbou Gauss-Seidel.
 
-V průběhu řešení je reziduum vyhodnocováno během jednotlivých iterací pomocí vztahu \eqref{eq:residuum}. Každý řešič má k reziduu trochu jíný přístup, obecně ale dochází k normalizaci a škálování rezidua vztahy
+Během jednotlivých iterací je v OpenFOAM reziduum vyhodnocováno pomocí vztahu \eqref{eq:residuum}. Každý řešič má k reziduu trochu jíný přístup, obecně ale dochází k normalizaci a škálování rezidua $\boldsymbol{r}$ vztahy
 
-$$n = \sum \left( | \boldsymbol{A}x - \boldsymbol{A}\hat{x} | + | \boldsymbol{b} - \boldsymbol{A}\hat{x} | \right),$$
-$$r = \frac{1}{n} \sum | \boldsymbol{b} - \boldsymbol{A}x |.$$ 
+$$n = \sum \left( | \boldsymbol{A} \boldsymbol{x} - \boldsymbol{A} \overline{\boldsymbol{x}} | + | \boldsymbol{b} - \boldsymbol{A} \overline{\boldsymbol{x}} | \right),$$
+$$\boldsymbol{r} = \frac{1}{n} \sum | \boldsymbol{b} - \boldsymbol{A} \boldsymbol{x} |,$$
 
-Pro každý typ řešice je třeba nastavit parametr pro velikost rezidua (\texttt{tolerance}) a také relativní toleranci (\texttt{relTol}) pro poměr aktuálního rezidua v rámci jedné iterace a počátečního rezidua před začátkem iterace. Lineární řešič se následně zastaví pokud je splněna alespoň jedna z těchto podmínek:
+kde $\overline{\boldsymbol{x}}$ je průměrný vektor řešení.  
+
+Pro každý typ řešice je třeba nastavit zastavovací parametr pro velikost rezidua (\texttt{tolerance}) a také relativní toleranci (\texttt{relTol}) což je poměr aktuálního rezidua a počátečního rezidua před začátkem iterace. Lineární řešič se následně zastaví pokud je splněna alespoň jedna z těchto podmínek:
 \begin{enumerate}
 	\item reziduum je menší než nastavená \texttt{tolerance},
 	\item relativní tolerance je menší než nastavená \texttt{relTol},
@@ -305,11 +305,11 @@ Pro každý typ řešice je třeba nastavit parametr pro velikost rezidua (\text
 
 %Metoda sdružených gradientů (CG) je iterační algoritmus řešení soustav lineárních rovnic, který využívá sdružených směrů a vyžaduje symetrickou matici (postivně definitní) matici $\boldsymbol{A}$. Proto vznikla i metoda "bi-conjugate gradients" (dvojitých sdružených směrů), která pracuje s asymetrickými maticemi. OpenFoam obsahuje řešiče PCG a PBiCG s implementací těchto řešičů. Obě varianty jsou předpodmíňěné. Navíc je obsažen i PBiCGStab řešič, který umí pracovat se symetricvkou i nesymetrickou maticí $\boldsymbol{A}$.
 
-Předpodmičovač je u většiny řešičů volitelný i když velmi doporučovaný. OpenFOAM implementuje následující předpodmiňovače:
+U většiny řešičů je pak volitlně nastaven předpodmičovač případně vyhlazovač. Podporované předpodmiňovače jsou v tabulce \ref{table:preconditioners} a vyhlazovače v tabulce \ref{table:smoothers}.
 
 \begin{table}[H]
 	\centering
-	\caption{přdpodmiňovače obsažené v OpenFOAM}
+	\caption{Předpodmiňovače implementované v OpenFOAM}
 	\renewcommand{\arraystretch}{1.7}
 	\begin{tabular}{*2l}
 		\toprule
@@ -323,24 +323,27 @@ Předpodmičovač je u většiny řešičů volitelný i když velmi doporučova
 		\bottomrule
 	\end{tabular}
 	
-	\label{table:solvers}
+	\label{table:preconditioners}
 \end{table}
 
-NĚCO O RELAXACI
-
-under-relaxation, a technique used for improving stability of a computation, particularly in solving steady-state problems. Under-relaxation works by limiting the amount which a variable changes from one iteration to the next, either by modifying the solution matrix and source prior to solving for a field or by modifying the field directly. An under-relaxation factor $\alpha, 0 < \alpha \leq 1$  specifies the amount of under-relaxation, ranging from none at all for $\alpha = 1$  and increasing in strength as $\alpha -> 0$ The limiting case where $\alpha =  0$  represents a solution which does not change at all with successive iterations. An optimum choice of $\alpha$  is one that is small enough to ensure stable computation but large enough to move the iterative process forward quickly; values of $\alpha$   as high as 0.9 can ensure stability in some cases and anything much below, say, 0.2 are prohibitively restrictive in slowing the iterative process
-
-
-\begin{enumerate}
-	\item jaké jsou možnosti, jaké jsou parametry
-	\begin{enumerate}
-		\item     diagonalSolver - pokud je matic A diagonální, pak vypočítám $A^{-1} = A/diag(A)$ a jsem hotov (https://www.openfoam.com/documentation/guides/latest/doc/guide-solvers.html)
-	\end{enumerate}
-\end{enumerate}
-
-
-
-
+\begin{table}[H]
+	\centering
+	\caption{Vyhlazovače implementované v OpenFOAM}
+	\renewcommand{\arraystretch}{1.7}
+	\begin{tabular}{*2l}
+		\toprule
+		\textbf{Vyhlazovačč} & \textbf{Označení}\\
+		\midrule
+		{\small DIC Gauss Seidel vyhlazovač}& DICGaussSeidel\\
+		{\small DIC vyhlazovač}& DIC\\		
+		{\small DILU vyhlazovač}& DILU \\		
+		{\small Gaussův-Seidelův vyhlazovač}& GaussSidel  \\
+		{\small Symetrický Gaussův-Seidelův vyhlazovač}& symGaussSeidel \\
+		\bottomrule
+	\end{tabular}
+	
+	\label{table:smoothers}
+\end{table}
 
 	{\let\clearpage\relax \chapter{Porovnání řešičů}}
 	
